# unit-na-tihom-tgbot

./: .env_sample  .gitignore  Dockerfile  README.md  all_events.py  database_sample.ini  docker-compose.yml  main.py  mongorestore.sh  pyproject.toml
data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-6983636433087251720.wt  collection-2-6983636433087251720.wt  collection-7-6983636433087251720.wt  index-1-6983636433087251720.wt  index-3-6983636433087251720.wt  index-8-6983636433087251720.wt  index-9-6983636433087251720.wt  sizeStorer.wt
data/.mongodb/mongosh/: 64d262f39c8c293a686be195_log  64d262f42bdcd0fc6f242e13_log  config
data/diagnostic.data/: metrics.2023-08-08T15-44-51Z-00000  metrics.2023-08-08T15-44-54Z-00000  metrics.2023-08-08T15-46-14Z-00000  metrics.2023-08-08T15-50-02Z-00000  metrics.2023-08-08T15-51-57Z-00000  metrics.2023-08-08T15-53-05Z-00000
data/tixiy_bot_db/: fs.chunks.metadata.json  fs.files.bson
dump/tixiy_bot_db/: events.metadata.json  fs.files.metadata.json
src/: all_events.py  config.py  main.py  mongo_db_add_events.py  mongo_ops.py  mongodb_fileupload.py  mongodb_test.py
src/dump/tixiy_bot_db/: events.bson  fs.chunks.bson
